added new plan fields, modified verifyCode and added deleteUser for tests
